# a-shares-market-data-crawler

./: .gitignore  README.md  config.example.json  pyproject.toml
.github/workflows/: test.yml
examples/: error_ratio.py  price_adjustment.py  ytd_to_annualized.py
src/a_shares_crawler/: __init__.py  __main__.py  a_shares.py  a_shares_em.py  a_shares_em_fetch.py  a_shares_em_parse.py  download.py  session.py  utils.py
src/a_shares_crawler/fetch/: __init__.py  balance_sheet.py  cash_flow_statement.py  daily_prices.py  dividends.py  equity_structures.py  income_statement.py  original_reports.py  symbol_list.py  utils.py
src/a_shares_crawler/parse/: __init__.py  balance_sheet.py  cash_flow_statement.py  daily_prices.py  dividends.py  equity_structures.py  income_statement.py  symbol_list.py
src/a_shares_crawler/types/: __init__.py  schema.py
